java/java-tests/testData/ig/com/siyeh/igtest/bitwise/negative_int/afterAddSuffix.java
// "Add 'L' suffix (changes semantics)" "true-preview"
class X {
  long x = 0xFFFF0000L;
}